# randperm-crt

./: Cargo.toml  README.md
src/: crt.rs  lib.rs
