[package]
name = "randperm-crt"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/benwh1/randperm-crt/"
description = "Small library for generating random permutations"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.9"

[dev-dependencies]
rand_xoshiro = "^0.7"
