[package]
name = "randperm-crt"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/benwh1/randperm-crt/"
description = "Small library for generating random permutations"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "^0.9", default-features = false }

[dev-dependencies]
rand_xoshiro = "^0.7"

[features]
default = ["thread_rng"]
thread_rng = ["rand/thread_rng"]
